# RAG-SYSTEM

./: .gitignore  README.md  app.py  ingest.py  pyproject.toml  rag_agent.py  requirements.txt
docs/: Admissions.txt  Courses.txt  University_overview.txt
static/: index.html  script.js  style.css
